# task_monitor_django

./: Dockerfile  README.md  db.sqlite3  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.docker/: entrypoint.sh
task_manager/: db.sqlite3  settings.py
task_manager/task_manager/: settings.py
tasks/: models.py
