[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Leandro Freitas", email = ""},
]
dependencies = [
    "asgiref==3.5.0",
    "django==3.2.11",
    "pytz==2021.3",
    "sqlparse==0.4.2",
    "requests>=2.27.1",
    "flask>=2.0.2",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
